--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 
 
 [dependencies]
+chrono = { version = "0.4.26", features = ["serde"] }
 darling = "0.20.1"
 derive_dataprovider_logic = { version = "0.1.0", path = "derive_dataprovider_logic" }
 derive_dataprovider_macros = { version = "0.1.0", path = "derive_dataprovider_macros" }
 proc-macro2 = "1.0.63"
 quote = "1.0.29"
+sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres"] }
 syn = { version = "2.0.23", features = ["full"] }
 uuid = { version = "1.4.0", features = ["serde", "v4"] }
