--- a/derive_dataprovider_macros/Cargo.toml
+++ b/derive_dataprovider_macros/Cargo.toml
@@ -16,8 +16,9 @@ uuid = []
 
 [dependencies]
 darling = "0.20.1"
-derive_dataprovider_logic = { version = "0.1.0", path = "../derive_dataprovider_logic" }
+# derive_dataprovider_logic = { version = "0.1.0", path = "../derive_dataprovider_logic" }
 proc-macro2 = "1.0.63"
 quote = "1.0.29"
 syn = { version = "2.0.23", features = ["full", "parsing"] }
+tailwag_orm = { version = "0.1.0", path = "../../tailwag_orm" }
 uuid = { version = "1.4.0", features = ["v4", "serde"] }
