--- a/derive_insertable_macros/Cargo.toml
+++ b/derive_insertable_macros/Cargo.toml
@@ -2,7 +2,7 @@
 proc-macro = true
 
 [package]
-name = "derive_dataprovider_macros"
+name = "derive_insertable_macros"
 version = "0.1.0"
 edition = "2021"
 
@@ -16,9 +16,7 @@ uuid = []
 
 [dependencies]
 darling = "0.20.1"
-# derive_dataprovider_logic = { version = "0.1.0", path = "../derive_dataprovider_logic" }
 proc-macro2 = "1.0.63"
 quote = "1.0.29"
 syn = { version = "2.0.23", features = ["full", "parsing"] }
-tailwag_orm = { version = "0.1.0", path = "../../tailwag_orm" }
-uuid = { version = "1.4.0", features = ["v4", "serde"] }
+# tailwag_orm = { version = "0.1.0", path = "../../../frameworks/tailwag_orm" }
