--- a/tailwag_macro_derive_queryable/Cargo.toml
+++ b/tailwag_macro_derive_queryable/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tailwag_macro_logic = { version = "0.1.0", path = "../tailwag_macro_logic" }
