--- a/tailwag_macro_derive_insertable/Cargo.toml
+++ b/tailwag_macro_derive_insertable/Cargo.toml
@@ -1,3 +1,6 @@
+[lib]
+proc-macro = true
+
 [package]
 name = "tailwag_macro_derive_insertable"
 version = "0.1.0"
@@ -6,4 +9,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+quote = "1.0.33"
+syn = "2.0.31"
 tailwag_macro_logic = { version = "0.1.0", path = "../tailwag_macro_logic" }
