--- a/tailwag_macro_logic/Cargo.toml
+++ b/tailwag_macro_logic/Cargo.toml
@@ -1,5 +1,4 @@
 [lib]
-proc-macro = true
 
 [package]
 name = "tailwag_macro_logic"
@@ -19,3 +18,4 @@ darling = "0.20.1"
 proc-macro2 = "1.0.63"
 quote = "1.0.29"
 syn = { version = "2.0.23", features = ["full", "parsing"] }
+tailwag_orm = { version = "0.1.0", path = "../../tailwag_orm" }
