--- a/tailwag_macro_logic/Cargo.toml
+++ b/tailwag_macro_logic/Cargo.toml
@@ -18,5 +18,5 @@ darling = "0.20.1"
 proc-macro2 = "1.0.63"
 quote = "1.0.29"
 syn = { version = "2.0.23", features = ["full", "parsing"] }
-tailwag_orm = { version = "0.1.0", path = "../../tailwag_orm" }
-tailwag_utils = { version = "0.1.0", path = "../../tailwag_utils" }
+tailwag_orm = { version = "0.1.0", path = "../../orm" }
+tailwag_utils = { version = "0.1.0", path = "../../utils" }
