--- a/tailwag_macro_inline/Cargo.toml
+++ b/tailwag_macro_inline/Cargo.toml
@@ -1,14 +1,14 @@
-[lib]
-proc-macro = true
-
 [package]
-name = "tailwag_macros_impl"
+name = "tailwag_macro_inline"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tailwag_macro_logic = { version = "0.1.0", path = "../tailwag_macro_logic" }
 
-syn = "2.0.31"
+[features]
+default = []
+orm = []
+# web_service = []
+# util = []
