Updates for crate publishing

--- a/tailwag_macro_exports/Cargo.toml
+++ b/tailwag_macro_exports/Cargo.toml
@@ -5,6 +5,8 @@ proc-macro = true
 name = "tailwag_macro_exports"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/nikwithak/tailwag_macros"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
