--- a/tailwag_macro_logic/Cargo.toml
+++ b/tailwag_macro_logic/Cargo.toml
@@ -4,6 +4,8 @@
 name = "tailwag_macro_logic"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/nikwithak/tailwag_macros"
 
 [features]
 orm = ["dep:tailwag_orm"]
